'ABC' to ABC and CARE' comprehensive appendix

--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -750,9 +750,9 @@ Q_i = \mathbf{W}_i \gamma^{Q} + \varepsilon^{Q}_i, \label{eq:selq}
 \setcounter{table}{0}   \renewcommand{\thetable}{F.\arabic{table}}
 \section{Calculating the Benfit-to-cost Ratio and the IRR}
 
-\noindent We estimate the benefit-to-cost ratio and the  internal rate of return of participation in ABC for the \textit{average participant} of the program. Let $B_{r,t}$ denote benefits and  $C_{r,t}$ denote costs for group $r$ at age $t$. Then $r$ takes either two values, $0$ for children randomized into the control group or $1$ for children randomized into the treatment group.\\ 
+\noindent We estimate the benefit-to-cost ratio and the  internal rate of return of participation in ABC and CARE for the \textit{average participant} of the program. Let $B_{r,t}$ denote benefits and  $C_{r,t}$ denote costs for group $r$ at age $t$. Then $r$ takes either two values, $0$ for children randomized into the control group or $1$ for children randomized into the treatment group.\\ 
 
-\noindent Both $B_{r,t}$ and $C_{r,t}$ are in 2014 USD and discounted to $t = 0$. Thus, the benefits $B_t = B_{1,t} - B_{0,t}$ and costs $C_t = C_{1,t} - C_{0,t}$ associated with program participation are the differences between the counter-factual benefits and costs. We use the counter-factual notation for costs because the costs for the control group are not zero: the control group children received some services from the ABC center and some attended alternative care programs. \\
+\noindent Both $B_{r,t}$ and $C_{r,t}$ are in 2014 USD and discounted to $t = 0$. Thus, the benefits $B_t = B_{1,t} - B_{0,t}$ and costs $C_t = C_{1,t} - C_{0,t}$ associated with program participation are the differences between the counter-factual benefits and costs. We use the counter-factual notation for costs because the costs for the control group are not zero: the control group children received some services from the ABC and CARE centers and some attended alternative care programs. \\
 
 \noindent The estimate for the benefit-to-cost ratio is
 \begin{align}
