Comprehensive appendix edits

--- a/Appendices/ProgramCosts.tex
+++ b/Appendices/ProgramCosts.tex
@@ -1,6 +1,6 @@
-\section[Program Costs of ABC]{Program Costs of ABC\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
+\section[Program Costs of ABC and CARE]{Program Costs of ABC and CARE\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
 
-\noindent In this appendix, we detail the associated costs of the program for the treatment group during each year of active participation in ABC. Table \ref{tab:treat-cost}  describes the components of the treatment and their costs. \\
+\noindent In this appendix, we detail the associated costs of the program for the treatment group during each year of active participation in ABC and CARE. Table \ref{tab:treat-cost}  describes the components of the treatment and their costs. \\
 
 
 \begin{table}[H]
@@ -79,7 +79,7 @@ Table \ref{tab:treat-cost} delineates the medical costs incurred by the average 
 \subsection{Staff Salaries}
 \noindent FPGC had rooms for infants, toddlers, and preschool-age children---each with different child-to-staff ratio. Infant nurseries had a ratio of 3:1. Toddler rooms and preschool classrooms had ratios of 4:1.\footnote{Playground and outdoor learning spaces had child-to-staff ratios of 5:1 and 6:1.} Classroom staff included teachers and teacher aides. Program staff also included administrators, researchers, and support staff (e.g. bus drivers, janitorial, and food preparation staff). We do not include the cost of research staff in our estimations. \\
 
-\noindent \cite{Barnett_Masse_2002_benefitcost} used employment and wage documentation from FPGC to estimate costs. We deviate from their calculations in the following ways. Due to lack of documentation of the services provided to ABC subjects, we do not include costs of volunteers, consultants, or an on-site social worker. However, we add in costs of support staff including janitorial and food preparation staff estimated from the Quarterly Census of Employment and Wages (1975). \\
+\noindent \cite{Barnett_Masse_2002_benefitcost} used employment and wage documentation from FPGC to estimate costs. We deviate from their calculations in the following ways. Due to lack of documentation of the services provided to ABC and CARE subjects, we do not include costs of volunteers, consultants, or an on-site social worker. However, we add in costs of support staff including janitorial and food preparation staff estimated from the Quarterly Census of Employment and Wages (1975). \\
 
 \subsection{Operating and Facilities Costs}
 
