anna and sarah debugginggit add .

--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -10,7 +10,7 @@ by a cell-based approach. The core of the model can be described as follows: the
 taxes, medical expenditures, and disability benefits. \\
 
 
-\noindent The cohort starter module includes the following variables for each ABC or CARE subject: \\
+\noindent The cohort starter module includes the following variables for each ABC and CARE subject: \\
 \begin{itemize}
 \item Individual characteristics: year of birth, gender, treatment status, education of the mother, race, and education at age 30.
 \item Economic outcomes at age 30: working status, earnings, and health insurance status.
