--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -27,7 +27,7 @@ Second, it is possible that BMI could increase or decrease systematically in the
 
 \noindent To address the first BMI imputation challenge, we considered a variation on the method of \citet*{Courtemanche_etal_2015_Adjusting-Body-Mass}.  If self-reported BMI can be seen as an observation of measured BMI with measurement error, then, conversely, measured BMI is an observation of what someone would report as their BMI with measurement error.  While the method in \citet{Courtemanche_etal_2015_Adjusting-Body-Mass} works with height and weight, we apply the specification to directly model BMI.  Using respondents aged 30 to 40 in the 2002-2010 NHANES waves, we reversed the model specification of \citet{Courtemanche_etal_2015_Adjusting-Body-Mass} to predict self-reported BMI from measured BMI percentile ranks.  Three variations on the   covariate specification of \citet{Courtemanche_etal_2015_Adjusting-Body-Mass} were also considered.  The average root mean squared error (RMSE) is computed over a ten-fold cross-validation. The minimum average RMSE among these models was 2.37.  In the same cross-validation folds we also estimated a simple regression model predicting self-reported BMI as a linear function of measured BMI and no other covariates.  This simple model had average RMSE of 1.98 over the cross-validation folds.  Therefore, a linear model was selected to impute self-reported BMI from measured BMI.\footnote{\citet{Courtemanche_etal_2015_Adjusting-Body-Mass} found smaller MSE by first predicting measured height and weight from self-reported height and weight and then computing BMI from the predicted values.  We did not investigate reversing the \citet{Courtemanche_etal_2015_Adjusting-Body-Mass} method for height and weight.} \\
 
-\noindent Having decided to impute self-reported BMI from measured BMI using a linear model at the age-34 interview, the next step is to estimate a model for self-reported BMI at the age-30 interview.  We estimate this model using a sample of PSID respondent observations at ages 33--40 (the ages observed in the ABC and CARE age-34 interview).  The model covariates included BMI and age at the time of observation along with demographic, health, and relationship status covariates observed at the respondent's first interview between ages 30 and 32 (the ages observed in the ABC and CARE  age-30 interview).  In order to be included in the estimation sample, a PSID respondent must be observed at least once in the 30-32 age range and at least once in 33--34 age range.  We estimate this model using OLS regression ($R^2 = 0.757$).
+\noindent Having decided to impute self-reported BMI from measured BMI using a linear model at the age-34 interview, the next step is to estimate a model for self-reported BMI at the age-30 interview.  We estimate this model using a sample of PSID respondent observations at ages 33--40 (the ages observed in the g and CARE age-34 interview).  The model covariates included BMI and age at the time of observation along with demographic, health, and relationship status covariates observed at the respondent's first interview between ages 30 and 32 (the ages observed in the ABC and CARE  age-30 interview).  In order to be included in the estimation sample, a PSID respondent must be observed at least once in the 30-32 age range and at least once in 33--34 age range.  We estimate this model using OLS regression ($R^2 = 0.757$).
 At the beginning of the simulation, each ABC and CARE subject's expected BMI was estimated from this model using covariates from the age-30 subject interview and their BMI and age in the age-34 health interview. A Monte Carlo Normal random draw was generated using the subject's expected BMI and the estimated variance from the model.  This Monte Carlo draw was then assigned to be the subject's initial BMI in the simulation.  Using BMI from the age-34 health interview limited the ABC and CARE subjects simulated in FAM to only those who had height and weight measured in the health interview. \\
 
 \noindent Subjects' health insurance coverage affects their medical costs.
