--- a/Appendices/Sensitivity.tex
+++ b/Appendices/Sensitivity.tex
@@ -16,7 +16,7 @@ sample selections from all of our data sources and other parameters. We analyze 
 
 \noindent Figure \ref{fig:bcr_discount} displays how the benefit-cost ratio changes as we adjust
 the rate at which we discount the cash flows. We find that for males, the benefits of 
-the program exceed the costs for discount rates as high as 12\%. We also
+the programs exceed the costs for discount rates as high as 12\%. We also
 find that the benefit-cost ratios for discount rates of 2--12\% remain within the 
 80\% confidence interval of our actual point estimate. The case is different for females,
 for whom the ratio falls below 1 at a discount rate of 6\%. The benefit-cost ratio for 
@@ -162,9 +162,9 @@ interval of the original estimate. This occurs when we double the parental incom
 flow of benefits. By tripling the component, we obtain an IRR exceeding 100\%, which we
 do not display in the chart above. This sensitivity is due to both the magnitude of the
 treatment effect on parental income, as well as how the treatment effect took place
-earlier in the ABC subjects' lives. The sensitivity of the IRR to the program costs
-is also a result of the timing of the costs in the subjects lives. As females in the treatment group attained higher levels of education
-than females in the control group, we observe that the IRR decreases as we multiply the
+earlier in the ABC and CARE subjects' lives. The sensitivity of the IRR to the program costs
+is also a result of the timing of the costs in the subjects lives. As females in the treatment groups attained higher levels of education
+than females in the control groups, we observe that the IRR decreases as we multiply the
 expenditure on education by increasingly large factors. On the other hand, this translates
 to additional labor income for females, which we observe to have a positive effect on the
 IRR. However, the IRR appears to be more sensitive to the costs of education relative
