--- a/Appendices/Income.tex
+++ b/Appendices/Income.tex
@@ -68,12 +68,12 @@ subject income for ages 31 through 67. \\
 \$300,000 (2014 USD) at any given year. With the mean labor income (2014 USD) in the ABC
 sample being \$12,232 at age 21 and \$32,782 at age 30, and the maximum reported
 being \$189,938, the cut-off we impose on the auxiliary data is high enough
-so that everyone in the ABC sample is represented, yet low enough to
-exclude high-earning individuals in the auxiliary sample that do not reflect the ABC sample well. \\
+so that everyone in the ABC  and CARE samples are represented, yet low enough to
+exclude high-earning individuals in the auxiliary sample that do not reflect the ABC or CARE samples well. \\
 
 \noindent We do not impose a restriction on birth year on the NLSY as all respondents are aged between 47 and 55
 at the time of the last interview (conducted in 2012). This age range is within the 31--67 range for which
-we extrapolate the income of the ABC subjects. \\
+we extrapolate the income of the ABC and CARE subjects. \\
 
 \noindent Given the biennial nature of the NLSY, we only observe each subject at either odd or even
 ages. Not only does this reduce the size of the sample on which we fit our prediction model
@@ -112,7 +112,7 @@ interpolating subject income. \\
 and 8,500 families in each wave. It began as yearly survey in 1968 and has been fielded biennially since 1996.
 When appropriately weighted, the PSID is designed to be representative of U.S. households. The PSID
 provides extensive information concerning demographics, economic outcomes, health outcomes, marriage
-and fertility, and more. In addition to using the PSID to forecast future earnings of ABC subjects, we
+and fertility, and more. In addition to using the PSID to forecast future earnings of ABC and CARE subjects, we
 use the PSID to forecast health outcomes. See Appendix \ref{section:data_psid} for details on how the
 PSID relates to health outcomes. \\
 
