--- a/Appendices/ProgramCosts.tex
+++ b/Appendices/ProgramCosts.tex
@@ -1,6 +1,6 @@
 \section[Program Costs of ABC]{Program Costs of ABC\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
 
-\noindent In this appendix, we detail the associated costs of the program for the treatment group during each year of active participation in ABC and CARE. Table \ref{tab:treat-cost}  describes the components of the treatment and their costs. It is crucial to note that our main estimations are based on pooling the children receiving center-based childcare in ABC and CARE to compare them with the control-group children in both programs. Children who were assigned to receive center-based childcare in CARE received family education in the form on home visits (see Appendix~\ref{appendix:programs}). None of the evidence we have at hand indicates that family education implied an additional cost. The staff implementing the center-based treatment implemented the home visits, without receiving an additional payment for the home visits.\footnote{A caveat of our calculation could be that we do not account for the transport cost to the children's homes. Our information indicates that the children lived relatively close to the center and the staff belonged to the same communities of the center. Thus, we conclude that this transportation cost was minimal.} \\
+\noindent In this appendix, we detail the associated costs of the program for the treatment group during each year of active participation in ABC and CARE. Table \ref{tab:treat-cost}  describes the components of the treatment and their costs. It is crucial to note that our main estimations are based on pooling the children receiving center-based childcare in ABC to compare them with the control-group children in both programs. Children who were assigned to receive center-based childcare in CARE received family education in the form on home visits (see Appendix~\ref{appendix:programs}). None of the evidence we have at hand indicates that family education implied an additional cost. The staff implementing the center-based treatment implemented the home visits, without receiving an additional payment for the home visits.\footnote{A caveat of our calculation could be that we do not account for the transport cost to the children's homes. Our information indicates that the children lived relatively close to the center and the staff belonged to the same communities of the center. Thus, we conclude that this transportation cost was minimal.} \\
 
 \begin{table}[H]
 \caption{Treatment Costs per Subject} \label{tab:treat-cost}
