--- a/Appendices/Education.tex
+++ b/Appendices/Education.tex
@@ -19,7 +19,7 @@
 
 \noindent We document the benefits of additional schooling through increases in income or health in following sections. In this section we focus on the costs of additional schooling. The effects on total years of education and high school graduation are both statistically and economically significant. The effects on women are stronger. In Figure \ref{fig:hsorged} we note that treatment made a substantial difference between high-school- and GED-completion rates. This is a relevant component of the program's cost. \\
 
-\noindent To estimate the costs of additional schooling, we combine various sources. Table \ref{tab:yearlyedu}   describes the yearly cost of education at every level and the age and duration for which these costs are incurred. We apply these costs additively up to the highest level of educational attainment by age 30. Pooling males and females, the treatment group had on average higher attainment and incurred a greater cost of education. To find the present value of the difference between the treatment and control groups, we first order educational attainment per Table \ref{tab:yearlyedu}. We find a difference between the average educational attainment of the treatment group (finish community college) and the average educational attainment of the control group (start community college). This can be represented as a cost that is \$12,586 higher for the treatment group than for the control group, as in Table \ref{tab:yearlyedu}. The effect of the program on the educational attainment of females, however, is much greater than the effect on that of males.
+\noindent To estimate the costs of additional schooling, we combine various sources. Table \ref{tab:yearlyedu}   describes the yearly cost of education at every level and the age and duration for which these costs are incurred. We apply these costs additively up to the highest level of educational attainment by age 30. Pooling males and females, the treatment groups had on average higher attainment and incurred a greater cost of education. To find the present value of the difference between the treatment and control groups, we first order educational attainment per Table \ref{tab:yearlyedu}. We find a difference between the average educational attainment of the treatment groups (finish community college) and the average educational attainment of the control groups (start community college). This can be represented as a cost that is \$12,586 higher for the treatment groups than for the control groups, as in Table \ref{tab:yearlyedu}. The effect of the program on the educational attainment of females, however, is much greater than the effect on that of males.
 
 \subsection{Measuring Lifetime Educational Attainment}
 
