--- a/Appendices/Health/results.tex
+++ b/Appendices/Health/results.tex
@@ -60,7 +60,7 @@
 \end{figure}
 
 \noindent Figure~\ref{figure:qaly} shows that predicted QALYs are higher over the entire life cycle for the treatment group than for the control group. This difference appears to be larger for males. This is not surprising, given that males show larger treatment effects in prevalence rates of disease than do females. Similarly, projected total medical costs are lower for the treatment group than for the control group over the entire life-cycle, as shown in Figure~\ref{figure:totmd}.
-Figure~\ref{figure:fam_survival} shows estimates of the survival probability for the treatment and control groups in FAM. There is a substantial difference in survival rates in favor of males in the treatment group when compared with those in the control group. \\
+Figure~\ref{figure:fam_survival} shows estimates of the survival probability for the treatment and control groups in FAM. There is a substantial difference in survival rates in favor of males in the treatment groups when compared with those in the control groups. \\
 
 
 \begin{figure}[H]
@@ -83,7 +83,7 @@ Figure~\ref{figure:fam_survival} shows estimates of the survival probability for
 }
 \end{figure}
 
-\noindent To quantify the impact of treatment on health outcomes, for each simulated cohort, we compute the present discounted value of the difference between treatment and control in the average value of QALYs and average medical costs. We do this for every age. We assume a discount rate of 4\% for this analysis, and we include outcome averages from the start of the simulation at age 30 until death for each cohort. We follow the recent literature on benefit-cost analysis of medical interventions and value a QALY of 1 to be worth \$150,000.\footnote{For a discussion on the limitations of a single value per QALY, see \citet{Pinto-Prades_etal_2009_Trying-to-Estimate} and \citet{Mason_etal_2009_Modelling}. \citet{Grosse_2008_Assessing-Cost-Effectiveness} summarizes the history of QALY valuation.} The raw difference in present discounted value at birth between treatment and control groups amounts to $ \$37,316  $ (2014 USD) per individual. Accounting for attrition, this difference falls to $ \$19,985 $. Table~\ref{table:PDV} shows the present discounted value of health outcomes for treatment and control cohorts in the top panel. The bottom panel of Table~\ref{table:PDV} decomposes the treatment effects on health by gender. The difference in health by treatment group is larger for males than for females. To account for a lack of consensus on QALY valuation, we also present the results for a lower valuation of QALYs, following \citet{Cutler_Meara_1998_Med-Costs_BOOK}, in the second row of each panel of Table~\ref{table:PDV}.\footnote{In Appendix \ref{appendix:sensitivity}, we show how the internal rate of return and benefit-cost ratios are impacted by a range of valuations for QALYs.} In this case of lower valuation of QALYs, there is still a positive difference in net health outcomes in favor of the treatment group over the control group of $ \$26,374$. Accounting for attrition, this difference falls to $ \$13,323$. \\
+\noindent To quantify the impact of treatment on health outcomes, for each simulated cohort, we compute the present discounted value of the difference between treatment and control in the average value of QALYs and average medical costs. We do this for every age. We assume a discount rate of 4\% for this analysis, and we include outcome averages from the start of the simulation at age 30 until death for each cohort. We follow the recent literature on benefit-cost analysis of medical interventions and value a QALY of 1 to be worth \$150,000.\footnote{For a discussion on the limitations of a single value per QALY, see \citet{Pinto-Prades_etal_2009_Trying-to-Estimate} and \citet{Mason_etal_2009_Modelling}. \citet{Grosse_2008_Assessing-Cost-Effectiveness} summarizes the history of QALY valuation.} The raw difference in present discounted value at birth between treatment and control groups amounts to $ \$37,316  $ (2014 USD) per individual. Accounting for attrition, this difference falls to $ \$19,985 $. Table~\ref{table:PDV} shows the present discounted value of health outcomes for treatment and control cohorts in the top panel. The bottom panel of Table~\ref{table:PDV} decomposes the treatment effects on health by gender. The difference in health by treatment group is larger for males than for females. To account for a lack of consensus on QALY valuation, we also present the results for a lower valuation of QALYs, following \citet{Cutler_Meara_1998_Med-Costs_BOOK}, in the second row of each panel of Table~\ref{table:PDV}.\footnote{In Appendix \ref{appendix:sensitivity}, we show how the internal rate of return and benefit-cost ratios are impacted by a range of valuations for QALYs.} In this case of lower valuation of QALYs, there is still a positive difference in net health outcomes in favor of the treatment groups over the control groups of $ \$26,374$. Accounting for attrition, this difference falls to $ \$13,323$. \\
 
 \begin{table}[H]
 \begin{threeparttable}
