--- a/Appendices/Sensitivity.tex
+++ b/Appendices/Sensitivity.tex
@@ -67,7 +67,7 @@ steadily decline as we increase the marginal cost of welfare to \$3 for every do
 of tax revenue. This is likely due
 to the fact that both females and males in treatment live longer, and are expected to 
 receive more Medicare and Medicaid benefits in their later life. 
-Also, we treat the costs of implementing ABC as a public cost. 
+Also, we treat the costs of implementing ABC and CARE as a public cost. 
 Thus, the steady increase in deadweight loss results in a 
 steady decline in the IRR. Nonetheless, we see that the IRRs 
 remain within the 80\% confidence interval of our original estimate 
@@ -107,7 +107,7 @@ the marginal cost of welfare. For females we see that the costs continue to exce
 assumed to equal \$1 for every dollar of tax revenue. For males, the benefits
 exceed the costs even as we increase the deadweight loss to \$3 for every dollar of tax
 revenue. The resilience of the benefit-cost ratio of males is attributed to the 
-large impacts ABC had on criminal activity, which bears a large cost to society. As we
+large impacts ABC and CARE had on criminal activity, which bears a large cost to society. As we
 increase the marginal cost of welfare, we are in fact increasing the stream of benefits
 associated with the reduction in criminal costs of males. At the same time, however,
 we are also increasing the later-life public medical costs associated with Medicare
@@ -266,7 +266,7 @@ by increasingly large factors.
 Finally, the IRR steadily 
 increases for males as we increase the magnitude of the criminal cost component. 
 This is not surprising because the reduction in the costs of crimes is the largest 
-benefit of ABC for males. 
+benefit of ABC and CARE for males. 
 
 
 \begin{figure}[H]
