--- a/Appendices/BackoftheEnvelopeCBA.tex
+++ b/Appendices/BackoftheEnvelopeCBA.tex
@@ -1,5 +1,5 @@
 
-\section{Back-of-the-Envelope Cost Benefit Analysis of ABC} \label{appendix:back}
+\section{Back-of-the-Envelope Cost Benefit Analysis of ABC and CARE} \label{appendix:back}
 
 \noindent This section presents a back-of-the-envelope cost-benefit analysis in a similar spirit to that of \citet{Chetty_Friedman_etal_2010_HowDoesYour} and \citet{Kline-Walters_2015_NBER-Evaluating}. The implementation is straightforward and it is based on the argument of  \citet{Chetty_Friedman_etal_2010_HowDoesYour} that a standard deviation in a kindergarten IQ score generates an increase of $13.1\%$ in earnings at age 27.\\
 
@@ -9,7 +9,7 @@
 B = 460,793.34 \left( \widehat{\Delta} R_{IQ}  N_{\text{Treated}}  -  N_{\text{Control}} \right) , 
 \end{equation}
 
-\noindent where $N_{\text{Treated}}$ is the number of subjects in the treatment group and $N_{\text{Control}}$ is the number of subjects in the control group. $R_{IQ}$ is the earnings return to a standard deviation increase in a kindergarten IQ test---13.1\% in the case of \citep{Chetty_Friedman_etal_2010_HowDoesYour}. Then, we let the total cost of the program (discounted to age 5) be $\$5,893,093.20$, as documented in Appendix~\ref{app:programcosts}. We denote this by $C$.\\ 
+\noindent where $N_{\text{Treated}}$ is the number of subjects in the treatment groups and $N_{\text{Control}}$ is the number of subjects in the control groups. $R_{IQ}$ is the earnings return to a standard deviation increase in a kindergarten IQ test---13.1\% in the case of \citep{Chetty_Friedman_etal_2010_HowDoesYour}. Then, we let the total cost of the program (discounted to age 5) be $\$5,893,093.20$, as documented in Appendix~\ref{app:programcosts}. We denote this by $C$.\\ 
 
 \noindent For the program to break-even with respect to costs and benefits, a much higher return to the kindergarten IQ test is needed than the one reported in \citep{Chetty_Friedman_etal_2010_HowDoesYour}, $13.1\%$ vs. $40\%$. Figure~\ref{figure:first} plots the relationship between the $B/C$ and various values of $R_{IQ}$.\\ 
 
