anna minor abc+care change

--- a/Appendices/BackoftheEnvelopeCBA.tex
+++ b/Appendices/BackoftheEnvelopeCBA.tex
@@ -1,5 +1,5 @@
 
-\section{Back-of-the-Envelope Cost Benefit Analysis of ABC and CARE} \label{appendix:back}
+\section{Back-of-the-Envelope Cost Benefit Analysis of ABC} \label{appendix:back}
 
 \noindent This section presents a back-of-the-envelope cost-benefit analysis in a similar spirit to that of \citet{Chetty_Friedman_etal_2010_HowDoesYour} and \citet{Kline-Walters_2015_NBER-Evaluating}. The implementation is straightforward and it is based on the argument of  \citet{Chetty_Friedman_etal_2010_HowDoesYour} that a standard deviation in a kindergarten IQ score generates an increase of $13.1\%$ in earnings at age 27.\\
 
